Change in config files

--- a/configs/hello_world_nlg_gru_json.yaml
+++ b/configs/hello_world_nlg_gru_json.yaml
@@ -29,6 +29,8 @@ server_config:
         step_size: 100
     val_freq: 2
     rec_freq: 4
+    initial_val : true
+    initial_freq: false
     max_iteration: 11
     num_clients_per_iteration: 10
     data_config:
