--- a/experiments/classif_cnn/config.yaml
+++ b/experiments/classif_cnn/config.yaml
@@ -1,15 +1,21 @@
+# Basic configuration file for running classif_cnn example using hdf5 files.
+# Parameters needed to initialize the model
 model_config:
     model_type: CNN                                    # class w/ `loss` and `inference` methods
     model_folder: experiments/classif_cnn/model.py     # file containing class
 
+# Configuration for differential privacy
 dp_config:
     enable_local_dp: false                             # whether to enable user-level DP
 
+# Additional privacy metrics
 privacy_metrics_config:
     apply_metrics: false                               # cache data to compute additional metrics
 
+# Select the Federated optimizer to use (e.g. DGA or FedAvg)
 strategy: DGA
 
+# Determines all the server-side settings for training and evaluation rounds
 server_config:   
     wantRL: false                                      # whether to use RL-based meta-optimizers
     resume_from_checkpoint: false                      # restart from checkpoint if file exists
@@ -46,6 +52,7 @@ server_config:
     fall_back_to_best_model: false
     softmax_beta: 1.0
 
+# Dictates the learning parameters for client-side model updates. Train data is defined inside this config.
 client_config:
     do_profiling: false                                # run profiling and compute runtime metrics
     ignore_subtask: false
