--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -27,6 +27,7 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+      uses: mpi4py/setup-mpi@v1
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
@@ -34,5 +35,10 @@ jobs:
       with:
         languages: ${{ matrix.language }}
         
+    # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
+    # If this step fails, then you should remove it and run the build manually (see below)
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v2
+
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
