--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -27,6 +27,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+
+    - name: Set-up MPI
       uses: mpi4py/setup-mpi@v1
 
     # Initializes the CodeQL tools for scanning.
